persist sync state

--- a/.env.example
+++ b/.env.example
@@ -41,7 +41,7 @@ TOLINO_REFRESH_TOKEN=
 
 # Path to the file where the script stores the mapping between
 # Calibre book UUIDs and Tolino deliverable IDs.
-SYNC_STATE_FILE=./sync-state.json
+SYNC_STATE_FILE=./sync/sync-state.json
 
 # Path to a directory where book files and covers will be temporarily
 # downloaded before being uploaded to Tolino. Ensure this directory exists.
